--- a/index.html
+++ b/index.html
@@ -2,6 +2,102 @@
 <html>
   <head>
     <meta charset="uft-8"/>
-    <title>Hola Mundo en HTML</title>
+    <title>Trabajo de Fin de Master</title>
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+
+  <body ng-app="mainModule" ng-controller="mainController">
+    <!-- Home Menu-->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" ng-if="!isLoged">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+          </button>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="hidden">
+              <a href="#page-top"></a>
+            </li>
+            <li class="page-scroll">
+              <a href="#/">Inicio</a>
+            </li>
+            <li class="page-scroll">
+              <a href="#/about">My Zean Coach</a>
+            </li>
+            <li class="page-scroll">
+              <a href="#/login">Login</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+
+    <!-- After Login Menu-->
+    <nav id="insideNav" class="navbar navbar-default navbar-fixed-top navbar-custom" ng-if="isLoged">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+          </button>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="hidden">
+              <a href="#page-top"></a>
+            </li>
+            <li class="page-scroll">
+              <a href="">Personalización</a>
+            </li>
+            <li class="page-scroll">
+              <a href="#/essential">Información Esencial</a>
+            </li>
+            <li class="page-scroll">
+              <a href="">Soluciones Cooperativas</a>
+            </li>
+            <li class="page-scroll">
+              <a href="#/minfulness">Bienestar/Minfulness</a>
+            </li>
+            <li class="page-scroll">
+              <a href="">Ocio y Tiempo Libre</a>
+            </li>
+            <li class="page-scroll">
+              <a href="" ng-click="logout()">Logout</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+    <br><br><br>
+
+    <div ng-view></div>
+
+    <script src="js/jquery-3.1.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/angular-route.min.js"></script>
+
+    <script src="app/main.js"></script>
+    <script src="app/controllers/home.js"></script>
+    <script src="app/controllers/after_login/essential-information.js"></script>
+    <script src="app/controllers/after_login/minfulness.js"></script>
+    <script src="app/models/authorization.js"></script>
+    <script src="app/services/storage.js"></script>
+    <script src="app/services/encode.js"></script>
+    <script src="app/models/videos.js"></script>
+  </body>
 </html>
