Se agrega opcion de olvide mi password y se agrega el eliminar videos

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-              <a href="">Personalización</a>
+              <a href="">Personalizaci&#243;n</a>
             </li>
             <li class="page-scroll">
-              <a href="#/essential">Información Esencial</a>
+              <a href="#/essential">Informaci&#243;n Esencial</a>
             </li>
             <li class="page-scroll">
               <a href="">Soluciones Cooperativas</a>
