Se integra el backend del modulo 4 con el web modulo 4

--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
     <script src="app/services/encode.js"></script>
     <script src="app/models/videos.js"></script>
     <script src="app/models/surveys.js"></script>
+    <script src="app/models/plans.js"></script>
   </body>
 </html>
