--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a href="#/essential">Informaci&#243;n Esencial</a>
             </li>
             <li class="page-scroll">
-              <a href="">Soluciones Cooperativas</a>
+              <a href="#/solutions">Soluciones Corporativas</a>
             </li>
             <li class="page-scroll">
               <a href="#/minfulness">Bienestar/Minfulness</a>
@@ -101,5 +101,6 @@
     <script src="app/models/videos.js"></script>
     <script src="app/models/surveys.js"></script>
     <script src="app/models/plans.js"></script>
+    <script src="app/models/solutions.js"></script>
   </body>
 </html>
