Se agrega la inyeccion del modulo de soluciones al rmudulo principal

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <script src="app/controllers/home.js"></script>
     <script src="app/controllers/after_login/essential-information.js"></script>
     <script src="app/controllers/after_login/minfulness.js"></script>
+    <script src="app/controllers/after_login/corporate-solution.js"></script>
     <script src="app/models/authorization.js"></script>
     <script src="app/services/storage.js"></script>
     <script src="app/services/encode.js"></script>
