Cambio Titulo del Modulo 2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a href="#/essential">Informaci&#243;n Esencial</a>
             </li>
             <li class="page-scroll">
-              <a href="#/solutions">Soluciones Corporativas</a>
+              <a href="#/solutions">Soluciones Cooperativas</a>
             </li>
             <li class="page-scroll">
               <a href="#/minfulness">Bienestar/Minfulness</a>
