Se integra el modulo 1 con el backend en las tres secciones: recordatorios, deteccion de estres y recomendaciones del coach

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-              <a href="">Personalizaci&#243;n</a>
+              <a href="#/personalization">Personalizaci&#243;n</a>
             </li>
             <li class="page-scroll">
               <a href="#/essential">Informaci&#243;n Esencial</a>
@@ -95,11 +95,16 @@
     <script src="app/controllers/home.js"></script>
     <script src="app/controllers/after_login/essential-information.js"></script>
     <script src="app/controllers/after_login/minfulness.js"></script>
+    <script src="app/controllers/after_login/personalization.js"></script>
     <script src="app/models/authorization.js"></script>
     <script src="app/services/storage.js"></script>
     <script src="app/services/encode.js"></script>
     <script src="app/models/videos.js"></script>
     <script src="app/models/surveys.js"></script>
     <script src="app/models/plans.js"></script>
+    <script src="app/models/reminders.js"></script>
+    <script src="app/models/users.js"></script>
+    <script src="app/models/stress.js"></script>
+    <script src="app/models/recomendations.js"></script>
   </body>
 </html>
