--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <body ng-app="mainModule" ng-controller="mainController" style="padding-top:0px;">
     <!-- Home Menu-->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" ng-if="!isLoged">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" ng-if="!isLoged"
+      style="background-color: #d05821;">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
@@ -28,13 +29,13 @@
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-              <a href="#/">Inicio</a>
+              <a href="#/"><span style="color:white;">INICIO</span></a>
             </li>
             <li class="page-scroll">
-              <a href="#/about">My Zean Coach</a>
+              <a href="#/about"><span style="color:white;">MY ZEAN COACH</span></a>
             </li>
             <li class="page-scroll">
-              <a href="#/login">Login</a>
+              <a href="#/login"><span style="color:white;">LOGIN</span></a>
             </li>
           </ul>
         </div>
@@ -44,7 +45,8 @@
     </nav>
 
     <!-- After Login Menu-->
-    <nav id="insideNav" class="navbar navbar-default navbar-fixed-top navbar-custom" ng-if="isLoged">
+    <nav id="insideNav" class="navbar navbar-default navbar-fixed-top navbar-custom" ng-if="isLoged"
+         style="background-color: #d05821;">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
@@ -60,22 +62,25 @@
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-              <a href="#/personalization">Personalizaci&#243;n</a>
+              <a href="#/personalization"><span style="color:white;">PERSONALIZACI&#211;N</span></a>
             </li>
             <li class="page-scroll">
-              <a href="#/essential">Informaci&#243;n Esencial</a>
+              <a href="#/essential"><span style="color:white;">INFORMACI&#211;N ESENCIAL</span></a>
             </li>
             <li class="page-scroll">
-              <a href="#/solutions">Soluciones Cooperativas</a>
+              <a href="#/solutions"><span style="color:white;">SOLUCIONES COOPERATIVAS</span></a>
             </li>
             <li class="page-scroll">
-              <a href="#/minfulness">Bienestar/Minfulness</a>
+              <a href="#/minfulness"><span style="color:white;">BIENESTAR</span></a>
             </li>
             <li class="page-scroll">
-              <a href="#/freetime">Ocio y Tiempo Libre</a>
+              <a href="#/freetime"><span style="color:white;">OCIO Y TIEMPO LIBRE</span></a>
             </li>
             <li class="page-scroll">
-              <a href="" ng-click="logout()">Logout</a>
+              <a href="#/reports"><span style="color:white;">INFORMES</span></a>
+            </li>
+            <li class="page-scroll">
+              <a href="" ng-click="logout()"><span style="color:white;">LOGOUT</span></a>
             </li>
           </ul>
         </div>
@@ -101,6 +106,8 @@
     <script src="app/controllers/after_login/personalization.js"></script>
     <script src="app/controllers/after_login/corporate-solution.js"></script>
     <script src="app/controllers/after_login/freetime.js"></script>
+    <script src="app/controllers/after_login/reports/reports.js"></script>
+    <script src="app/controllers/after_login/reports/users_frecuency.js"></script>
     <script src="app/models/authorization.js"></script>
     <script src="app/services/storage.js"></script>
     <script src="app/services/encode.js"></script>
