label mindfulness and My Zen Coach

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="#/"><span style="color:white;">INICIO</span></a>
             </li>
             <li class="page-scroll">
-              <a href="#/about"><span style="color:white;">MY ZEAN COACH</span></a>
+              <a href="#/about"><span style="color:white;">MY ZEN COACH</span></a>
             </li>
             <li class="page-scroll">
               <a href="#/login"><span style="color:white;">LOGIN</span></a>
